--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="contact-container">
-        <form action="" class="contact-left">
+        <form action="https://api.web3forms.com/submit" method="POST"class="contact-left">
             <div class="contact-left-title">
                 <h2>get in touch</h2>
                 <hr>
             </div>
+            <input type="hidden" name="access_key" value="f8a78fe0-5500-4984-be27-111262639e70">
             <input type="text" name="name" placeholder="your name" class="contact-inputs" required>
             <input type="email" name="email" placeholder="your email" class="contact-inputs" required>
             <textarea name="message" placeholder="your message" class="contact-inputs" required></textarea>
